[gd_scene load_steps=6 format=3 uid="uid://2pi622xycrd6"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/tools/gizmos/gizmo_translate.gd" id="1_fyqe0"]
[ext_resource type="PackedScene" uid="uid://ujq3kes2sdfu" path="res://addons/cyclops_level_builder/art/gizmos/gizmo_translate.glb" id="1_ljs46"]
[ext_resource type="Material" uid="uid://bv4k8o22vl6ub" path="res://addons/cyclops_level_builder/materials/gizmo_axis_y_material.tres" id="3_tsii4"]
[ext_resource type="Material" uid="uid://divsg4lq712rw" path="res://addons/cyclops_level_builder/materials/gizmo_axis_z_material.tres" id="4_0qd8v"]
[ext_resource type="Material" uid="uid://drodm0wf41vin" path="res://addons/cyclops_level_builder/materials/gizmo_axis_x_material.tres" id="5_xvd3e"]

[node name="gizmo_translate" type="Node3D"]
script = ExtResource("1_fyqe0")

[node name="gizmo_translate" parent="." instance=ExtResource("1_ljs46")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="axis_y" parent="gizmo_translate" index="0"]
lod_bias = 128.0
ignore_occlusion_culling = true
surface_material_override/0 = ExtResource("3_tsii4")

[node name="axis_z" parent="gizmo_translate" index="1"]
lod_bias = 128.0
ignore_occlusion_culling = true
surface_material_override/0 = ExtResource("4_0qd8v")

[node name="axis_x" parent="gizmo_translate" index="2"]
lod_bias = 128.0
ignore_occlusion_culling = true
surface_material_override/0 = ExtResource("5_xvd3e")

[node name="plane_xz" parent="gizmo_translate" index="3"]
lod_bias = 128.0
ignore_occlusion_culling = true
surface_material_override/0 = ExtResource("3_tsii4")

[node name="plane_yz" parent="gizmo_translate" index="4"]
lod_bias = 128.0
ignore_occlusion_culling = true
surface_material_override/0 = ExtResource("5_xvd3e")

[node name="plane_xy" parent="gizmo_translate" index="5"]
lod_bias = 128.0
ignore_occlusion_culling = true
surface_material_override/0 = ExtResource("4_0qd8v")

[editable path="gizmo_translate"]
